--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,8 @@ dependencies {
 
     implementation 'com.android.support:cardview-v7:24.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.4'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.4'
+
     implementation 'com.android.support:design:28.0.0'
 }
