--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,9 +14,9 @@
         android:theme="@style/Theme.Caboconsultas"
         tools:targetApi="31">
         <activity
-            android:name=".AppointmentsActivity"
+            android:name=".ui.AppointmentsActivity"
             android:exported="true"
-            android:parentActivityName=".MenuActivity">
+            android:parentActivityName=".ui.MenuActivity">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -25,9 +26,9 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".CreateAppointmentActivitiy"
+            android:name=".ui.CreateAppointmentActivitiy"
             android:exported="true"
-            android:parentActivityName=".MenuActivity">
+            android:parentActivityName=".ui.MenuActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -37,7 +38,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MenuActivity"
+            android:name=".ui.MenuActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
@@ -48,7 +49,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegisterActivity"
+            android:name=".ui.RegisterActivity"
             android:exported="true"
             android:launchMode="singleInstance">
             <meta-data
@@ -60,7 +61,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:exported="true"
             android:launchMode="singleInstance">
             <intent-filter>
