--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.6.4'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.4'
-
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
     implementation 'com.android.support:design:28.0.0'
 }
