Google authentication added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,20 @@
         android:theme="@style/Theme.Caboconsultas"
         tools:targetApi="31">
         <activity
-            android:name=".ui.ProfileActivity"
-            android:parentActivityName=".ui.MenuActivity"
+            android:name=".HomeActivity"
             android:exported="true">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.ProfileActivity"
+            android:exported="true"
+            android:parentActivityName=".ui.MenuActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -36,6 +44,7 @@
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
